--- a/package.xml
+++ b/package.xml
@@ -9,16 +9,18 @@
 	<license>all-rights-reserved</license>
 
 	<buildtool_depend>catkin</buildtool_depend>
-	<depend>roscpp</depend>
+	<depend>cv_bridge</depend>
 	<depend>dr_base</depend>
-	<depend>dr_ros</depend>
-	<depend>dr_util</depend>
+	<depend>dr_eigen</depend>
 	<depend>dr_ensenso</depend>
 	<depend>dr_msgs</depend>
-	<depend>dr_eigen</depend>
+	<depend>dr_ros</depend>
+	<depend>dr_util</depend>
+	<depend>image_transport</depend>
 	<depend>pcl</depend>
 	<depend>pcl_conversions</depend>
 	<depend>pcl_ros</depend>
+	<depend>roscpp</depend>
 
 	<export>
 	</export>
