Remove dependency on dr_util.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,6 @@ find_package(catkin REQUIRED COMPONENTS
 	dr_msgs
 	dr_ros
 	dr_thread
-	dr_util
 	image_transport
 	pcl_conversions
 	pcl_ros
@@ -23,7 +22,7 @@ dr_include_directories(
 	${catkin_INCLUDE_DIRS}
 )
 
-add_executable(ensenso      src/ensenso.cpp)
+add_executable(ensenso      src/ensenso.cpp src/timestamp.cpp)
 add_executable(fake_ensenso src/fake_ensenso.cpp)
 target_link_libraries(ensenso      ${catkin_LIBRARIES})
 target_link_libraries(fake_ensenso ${catkin_LIBRARIES})
