--- a/package.xml
+++ b/package.xml
@@ -24,7 +24,5 @@
 	<depend>pcl_conversions</depend>
 	<depend>pcl_ros</depend>
 	<depend>roscpp</depend>
-
-	<export>
-	</export>
+	<depend>tf2</depend>
 </package>
