--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
 	<depend>dr_msgs</depend>
 	<depend>dr_ros</depend>
 	<depend>dr_thread</depend>
+	<depend>dr_util</depend>
 	<depend>image_transport</depend>
 	<depend>pcl</depend>
 	<depend>pcl_conversions</depend>
