Depend on dr_pcl for correct compile options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,11 @@ find_package(catkin REQUIRED COMPONENTS
 	dr_ensenso_msgs
 	dr_msgs
 	dr_opencv
+	dr_pcl
 	dr_ros
 	dr_thread
 	dr_util
 	image_transport
-	pcl_conversions
 	pcl_ros
 	roscpp
 	tf2
