--- a/package.xml
+++ b/package.xml
@@ -17,11 +17,11 @@
 	<depend>dr_ensenso_msgs</depend>
 	<depend>dr_msgs</depend>
 	<depend>dr_opencv</depend>
+	<depend>dr_pcl</depend>
 	<depend>dr_ros</depend>
 	<depend>dr_thread</depend>
 	<depend>dr_util</depend>
 	<depend>image_transport</depend>
-	<depend>pcl_conversions</depend>
 	<depend>pcl_ros</depend>
 	<depend>roscpp</depend>
 	<depend>tf2</depend>
