--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
 	<depend>dr_ros</depend>
 	<depend>dr_thread</depend>
 	<depend>dr_util</depend>
+	<depend>estd</depend>
 	<depend>image_transport</depend>
 	<depend>pcl_ros</depend>
 	<depend>roscpp</depend>
